# opentoonz_plugin_study

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hiking_not.plugin  hiking_not_Darwin.plugin
src/: main.cpp
